[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/tileset.png" type="Texture" id=1]
[ext_resource path="res://src/Actor/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://assets/Scene5.ogg" type="AudioStream" id=4]
[ext_resource path="res://src/Actor/Tree.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Dungeon7.ogg" type="AudioStream" id=6]
[ext_resource path="res://src/Actor/Rock.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Levels.gd" type="Script" id=8]
[ext_resource path="res://src/Actor/Grass.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Actor/enemy.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Actor/enemy2.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Actor/enemy3.tscn" type="PackedScene" id=12]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 78, 0, 78, 76, 0, 76 )

[sub_resource type="TileSet" id=2]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1, 1, 78, 76 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Animation" id=3]
resource_name = "ToDay"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.2, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.454902, 0.454902, 0.454902, 1 ), Color( 1, 0.772549, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.3, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.772549, 0, 1 ), Color( 0.454902, 0.454902, 0.454902, 1 ) ]
}

[node name="LevelTemplete" type="Node2D"]
position = Vector2( 27, 107 )
script = ExtResource( 8 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 1036, 972 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
collision_layer = 8
format = 1
tile_data = PoolIntArray( -131007, 0, 0, -131006, 0, 0, -131005, 0, 0, -131004, 0, 0, -131003, 0, 0, -131002, 0, 0, -131001, 0, 0, -131000, 0, 0, -130999, 0, 0, -130998, 0, 0, -130997, 0, 0, -130996, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0, -65483, 0, 0, -65482, 0, 0, -65481, 0, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, -65471, 0, 0, -65470, 0, 0, -65469, 0, 0, -65468, 0, 0, -65467, 0, 0, -65466, 0, 0, -65465, 0, 0, -65464, 0, 0, -65463, 0, 0, -65462, 0, 0, -65461, 0, 0, -65460, 0, 0, -65459, 0, 0, -65458, 0, 0, 0, 0, 0, 31, 0, 0, 78, 0, 0, 65536, 0, 0, 65567, 0, 0, 65614, 0, 0, 131072, 0, 0, 131103, 0, 0, 131150, 0, 0, 196608, 0, 0, 196639, 0, 0, 196686, 0, 0, 262144, 0, 0, 262175, 0, 0, 262222, 0, 0, 262223, 0, 0, 393207, 0, 0, 393208, 0, 0, 393213, 0, 0, 393214, 0, 0, 327680, 0, 0, 327711, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 0, 0, 327718, 0, 0, 327719, 0, 0, 327720, 0, 0, 327721, 0, 0, 327722, 0, 0, 327723, 0, 0, 327724, 0, 0, 327725, 0, 0, 327726, 0, 0, 327727, 0, 0, 327728, 0, 0, 327729, 0, 0, 327730, 0, 0, 327731, 0, 0, 327732, 0, 0, 327733, 0, 0, 327734, 0, 0, 327735, 0, 0, 327736, 0, 0, 327737, 0, 0, 327738, 0, 0, 327759, 0, 0, 458743, 0, 0, 458744, 0, 0, 458749, 0, 0, 458750, 0, 0, 393216, 0, 0, 393247, 0, 0, 393295, 0, 0, 458752, 0, 0, 458783, 0, 0, 458831, 0, 0, 524288, 0, 0, 524319, 0, 0, 524367, 0, 0, 589824, 0, 0, 589855, 0, 0, 589903, 0, 0, 720888, 0, 0, 720893, 0, 0, 655360, 0, 0, 655391, 0, 0, 655439, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 720896, 0, 0, 720927, 0, 0, 720975, 0, 0, 786432, 0, 0, 786463, 0, 0, 786510, 0, 0, 786511, 0, 0, 851968, 0, 0, 851999, 0, 0, 852045, 0, 0, 852046, 0, 0, 917504, 0, 0, 917535, 0, 0, 917579, 0, 0, 917580, 0, 0, 917581, 0, 0, 917582, 0, 0, 983040, 0, 0, 983071, 0, 0, 983111, 0, 0, 983112, 0, 0, 983113, 0, 0, 983114, 0, 0, 983115, 0, 0, 983118, 0, 0, 1048576, 0, 0, 1048607, 0, 0, 1048642, 0, 0, 1048643, 0, 0, 1048644, 0, 0, 1048645, 0, 0, 1048646, 0, 0, 1048654, 0, 0, 1114112, 0, 0, 1114143, 0, 0, 1114163, 0, 0, 1114164, 0, 0, 1114165, 0, 0, 1114166, 0, 0, 1114167, 0, 0, 1114168, 0, 0, 1114169, 0, 0, 1114170, 0, 0, 1114171, 0, 0, 1114172, 0, 0, 1114173, 0, 0, 1114174, 0, 0, 1114175, 0, 0, 1114176, 0, 0, 1114177, 0, 0, 1114190, 0, 0, 1179648, 0, 0, 1179679, 0, 0, 1179694, 0, 0, 1179695, 0, 0, 1179696, 0, 0, 1179697, 0, 0, 1179698, 0, 0, 1179699, 0, 0, 1179725, 0, 0, 1179726, 0, 0, 1245184, 0, 0, 1245215, 0, 0, 1245222, 0, 0, 1245223, 0, 0, 1245224, 0, 0, 1245225, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1245228, 0, 0, 1245229, 0, 0, 1245230, 0, 0, 1245261, 0, 0, 1310720, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0, 1310756, 0, 0, 1310757, 0, 0, 1310797, 0, 0, 1376256, 0, 0, 1376287, 0, 0, 1376333, 0, 0, 1441792, 0, 0, 1441823, 0, 0, 1441869, 0, 0, 1507328, 0, 0, 1507359, 0, 0, 1507404, 0, 0, 1507405, 0, 0, 1572864, 0, 0, 1572895, 0, 0, 1572939, 0, 0, 1572940, 0, 0, 1638400, 0, 0, 1638431, 0, 0, 1638474, 0, 0, 1638475, 0, 0, 1703936, 0, 0, 1703967, 0, 0, 1704009, 0, 0, 1704010, 0, 0, 1769472, 0, 0, 1769503, 0, 0, 1769543, 0, 0, 1769544, 0, 0, 1835008, 0, 0, 1835039, 0, 0, 1835077, 0, 0, 1835078, 0, 0, 1900544, 0, 0, 1900575, 0, 0, 1900610, 0, 0, 1900611, 0, 0, 1900612, 0, 0, 1966080, 0, 0, 1966081, 0, 0, 1966082, 0, 0, 1966083, 0, 0, 1966084, 0, 0, 1966085, 0, 0, 1966086, 0, 0, 1966087, 0, 0, 1966088, 0, 0, 1966089, 0, 0, 1966090, 0, 0, 1966091, 0, 0, 1966092, 0, 0, 1966093, 0, 0, 1966094, 0, 0, 1966095, 0, 0, 1966096, 0, 0, 1966097, 0, 0, 1966098, 0, 0, 1966099, 0, 0, 1966100, 0, 0, 1966101, 0, 0, 1966102, 0, 0, 1966103, 0, 0, 1966104, 0, 0, 1966105, 0, 0, 1966106, 0, 0, 1966107, 0, 0, 1966108, 0, 0, 1966109, 0, 0, 1966110, 0, 0, 1966111, 0, 0, 1966140, 0, 0, 1966141, 0, 0, 1966142, 0, 0, 1966143, 0, 0, 1966144, 0, 0, 1966145, 0, 0, 2031654, 0, 0, 2031655, 0, 0, 2031656, 0, 0, 2031657, 0, 0, 2031658, 0, 0, 2031659, 0, 0, 2031660, 0, 0, 2031661, 0, 0, 2031662, 0, 0, 2031663, 0, 0, 2031664, 0, 0, 2031665, 0, 0, 2031666, 0, 0, 2031667, 0, 0, 2031668, 0, 0, 2031669, 0, 0, 2031670, 0, 0, 2031671, 0, 0, 2031672, 0, 0, 2031673, 0, 0, 2031674, 0, 0, 2031675, 0, 0, 3014739, 0, 0, 3014740, 0, 0, 3014741, 0, 0, 3014742, 0, 0, 3014743, 0, 0, 3014744, 0, 0, 3014745, 0, 0, 3014746, 0, 0, 3014747, 0, 0, 3014748, 0, 0, 3014749, 0, 0, 3014750, 0, 0, 3014751, 0, 0, 3014752, 0, 0, 3014753, 0, 0, 3014754, 0, 0, 3014755, 0, 0, 3014756, 0, 0, 3014757, 0, 0, 3014758, 0, 0, 3014759, 0, 0, 3014760, 0, 0, 3014761, 0, 0, 3014762, 0, 0, 3014763, 0, 0, 3014764, 0, 0, 3014765, 0, 0, 3014766, 0, 0, 3014767, 0, 0, 3014768, 0, 0, 3014769, 0, 0, 3014770, 0, 0, 3014771, 0, 0, 3014772, 0, 0, 3014773, 0, 0, 3014774, 0, 0, 3014775, 0, 0, 3014776, 0, 0, 3014777, 0, 0, 3014778, 0, 0, 3014779, 0, 0, 3014780, 0, 0, 3014781, 0, 0, 3080273, 0, 0, 3080274, 0, 0, 3080275, 0, 0, 3080289, 0, 0, 3080317, 0, 0, 3145809, 0, 0, 3145825, 0, 0, 3145853, 0, 0, 3211345, 0, 0, 3211361, 0, 0, 3211389, 0, 0, 3211390, 0, 0, 3276881, 0, 0, 3276897, 0, 0, 3276926, 0, 0, 3342417, 0, 0, 3342433, 0, 0, 3342462, 0, 0, 3407953, 0, 0, 3407967, 0, 0, 3407968, 0, 0, 3407969, 0, 0, 3407998, 0, 0, 3473489, 0, 0, 3473499, 0, 0, 3473500, 0, 0, 3473501, 0, 0, 3473502, 0, 0, 3473503, 0, 0, 3473534, 0, 0, 3539025, 0, 0, 3539070, 0, 0, 3604561, 0, 0, 3604606, 0, 0, 3670097, 0, 0, 3670142, 0, 0, 3670143, 0, 0, 3735633, 0, 0, 3735678, 0, 0, 3735679, 0, 0, 3801169, 0, 0, 3801214, 0, 0, 3801215, 0, 0, 3866705, 0, 0, 3866750, 0, 0, 3932240, 0, 0, 3932241, 0, 0, 3932286, 0, 0, 3997776, 0, 0, 3997822, 0, 0, 4063312, 0, 0, 4063358, 0, 0, 4128848, 0, 0, 4128894, 0, 0, 4194384, 0, 0, 4194430, 0, 0, 4259920, 0, 0, 4259966, 0, 0, 4325456, 0, 0, 4325502, 0, 0, 4390992, 0, 0, 4391038, 0, 0, 4456528, 0, 0, 4456574, 0, 0, 4522065, 0, 0, 4522066, 0, 0, 4522067, 0, 0, 4522068, 0, 0, 4522069, 0, 0, 4522070, 0, 0, 4522071, 0, 0, 4522072, 0, 0, 4522073, 0, 0, 4522074, 0, 0, 4522075, 0, 0, 4522076, 0, 0, 4522077, 0, 0, 4522078, 0, 0, 4522079, 0, 0, 4522080, 0, 0, 4522081, 0, 0, 4522082, 0, 0, 4522083, 0, 0, 4522084, 0, 0, 4522085, 0, 0, 4522086, 0, 0, 4522087, 0, 0, 4522088, 0, 0, 4522089, 0, 0, 4522090, 0, 0, 4522091, 0, 0, 4522092, 0, 0, 4522093, 0, 0, 4522094, 0, 0, 4522095, 0, 0, 4522096, 0, 0, 4522097, 0, 0, 4522098, 0, 0, 4522099, 0, 0, 4522100, 0, 0, 4522101, 0, 0, 4522102, 0, 0, 4522103, 0, 0, 4522104, 0, 0, 4522105, 0, 0, 4522106, 0, 0, 4522107, 0, 0, 4522108, 0, 0, 4522109, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1066, 961 )
collision_mask = 26

[node name="MusicNight" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0

[node name="MusicDay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -2.0
autoplay = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="day_night" type="AnimationPlayer" parent="."]
anims/ToDay = SubResource( 3 )
anims/ToNight = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="Tree" parent="." instance=ExtResource( 5 )]
position = Vector2( 1061, 571 )

[node name="Tree2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1200, 577 )

[node name="Tree3" parent="." instance=ExtResource( 5 )]
position = Vector2( 894, 554 )

[node name="Tree4" parent="." instance=ExtResource( 5 )]
position = Vector2( 793, 627 )

[node name="Tree5" parent="." instance=ExtResource( 5 )]
position = Vector2( 1025, 675 )

[node name="Tree6" parent="." instance=ExtResource( 5 )]
position = Vector2( 1192, 694 )

[node name="Tree7" parent="." instance=ExtResource( 5 )]
position = Vector2( 895, 715 )

[node name="Rock" parent="." instance=ExtResource( 7 )]
position = Vector2( 457, 1464 )

[node name="Rock2" parent="." instance=ExtResource( 7 )]
position = Vector2( 278, 1110 )

[node name="Rock3" parent="." instance=ExtResource( 7 )]
position = Vector2( 386, 873 )

[node name="Rock4" parent="." instance=ExtResource( 7 )]
position = Vector2( 757, 1019 )

[node name="Rock5" parent="." instance=ExtResource( 7 )]
position = Vector2( 589, 1207 )

[node name="Grass" parent="." instance=ExtResource( 9 )]
position = Vector2( 1272, 1018 )

[node name="Grass2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1631, 835 )

[node name="Grass3" parent="." instance=ExtResource( 9 )]
position = Vector2( 1550, 1191 )

[node name="Grass4" parent="." instance=ExtResource( 9 )]
position = Vector2( 994, 1239 )

[node name="Enemy" parent="." instance=ExtResource( 10 )]
position = Vector2( 423, 1696 )

[node name="Enemy2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1750, 1695 )

[node name="Enemy3" parent="." instance=ExtResource( 12 )]
position = Vector2( 1912, 351 )

[node name="Enemy4" parent="." instance=ExtResource( 11 )]
position = Vector2( 1910, 1834 )

[node name="Enemy5" parent="." instance=ExtResource( 11 )]
position = Vector2( 1602, 1799 )

[node name="Enemy6" parent="." instance=ExtResource( 11 )]
position = Vector2( 1897, 1574 )

[node name="Enemy7" parent="." instance=ExtResource( 10 )]
position = Vector2( 419, 1876 )

[node name="Enemy8" parent="." instance=ExtResource( 10 )]
position = Vector2( 550, 1815 )

[node name="Enemy9" parent="." instance=ExtResource( 10 )]
position = Vector2( 250, 1674 )

[node name="Enemy10" parent="." instance=ExtResource( 10 )]
position = Vector2( 263, 1797 )

[node name="Enemy11" parent="." instance=ExtResource( 12 )]
position = Vector2( 152, 104 )

[node name="Enemy12" parent="." instance=ExtResource( 12 )]
position = Vector2( 1863, 159 )

[node name="Enemy13" parent="." instance=ExtResource( 12 )]
position = Vector2( 1713, 101 )

[node name="Enemy14" parent="." instance=ExtResource( 12 )]
position = Vector2( 343, 133 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
